fix npe in SqlserverBigDataService: `newResource` is not implemented.